[package]
name = "os-learning"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.3"
rand = "0.7"
pendulum = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
prettytable-rs = "0.8"
keyed_priority_queue = {git="https://github.com/AngelicosPhosphoros/keyed_priority_queue.git"}