[package]
name = "os-learning"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.4"
fastrand = "1.2"
pendulum = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
prettytable-rs = "0.8"
keyed_priority_queue = "0.2"
nom = "5"
either = "1.5"
intrusive-collections = "0.9"
itertools = "0.9"